Rename project to POTATO and update related documentation
Updated the project name and description in `composer.json` and rebranded the README to reflect the new identity as "POTATO". Added an initial structure for documentation, including features and installation sections.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "carvemerson/skeleton-php",
-    "description": "A skeleton to be used on laravel packages",
+    "name": "carvemerson/potato",
+    "description": "The ",
     "type": "library",
     "require": {
         "php": "^8.2",
