Update project description and add acronym explanation
Updated the composer.json description with the full meaning of POTATO. Expanded README.md to include a detailed breakdown of the POTATO acronym components.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "carvemerson/potato",
-    "description": "The ",
+    "description": "The Progressive Open-source Toolkit for Admin Template Orchestration",
     "type": "library",
     "require": {
         "php": "^8.2",
