Refactor RecordList, optimize PHPStan, and clean Task model.
Refactored `getTitle` method in RecordList to improve type safety and readability. Updated PHPStan memory limit in composer script for better performance during analysis. Removed unused imports in Task model to clean up the code.

--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,7 @@
         "lint": "pint",
         "test:refactor": "rector --dry-run",
         "test:lint": "pint --test",
-        "test:types": "phpstan analyse --ansi",
+        "test:types": "phpstan analyse --ansi --memory-limit=1G",
         "test:unit": "pest --colors=always --parallel --min=100",
         "test": [
             "@clear",
